Added docs and better splitting of docker compose files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,28 @@
-web:
-  restart: on-failure:5
-  build: ./web
-  expose:
-    - "5000"
-  command: /usr/local/bin/gunicorn -w 2 -b :8000 run:server
-  env_file: .env
-  volumes:
-    - ./web/data:/usr/src/app/web/data
-    - /var/lib/postgresql/data:/var/lib/postgresql/data
-  links:
-    - postgres:postgres
+version: '2'
+services:
+  web:
+    restart: on-failure:5
+    build: ./web
+    expose:
+      - "5000"
+    command: /usr/local/bin/gunicorn -w 2 -b :8000 run:server
+    env_file: .env
+    volumes:
+      - ./web/data:/usr/src/app/web/data
+      - /var/lib/postgresql/data:/var/lib/postgresql/data
+    links:
+      - postgres:postgres
 
-dev:
-  build: ./web
-  ports:
-    - "80:80"
-  expose:
-    - "80"
-  command: ./run-debug.sh
-  env_file: .env
-  volumes:
-    - ./web/data:/usr/src/app/web/data
-  links:
-    - postgres:postgres
+  nginx:
+    build: ./nginx/
+    ports:
+      - "80:80"
+    links:
+      - web:web
 
-nginx:
-  build: ./nginx/
-  ports:
-    - "80:80"
-  links:
-    - web:web
-
-postgres:
-  image: postgres:latest
-  volumes:
-    - /var/lib/postgresql/data:/var/lib/postgresql/data
-  ports:
-    - "5432:5432"
-
-test:
-  build: ./web
-  expose:
-    - "5000"
-  env_file: .env
-  environment:
-    AUTHORIZATION_ENABLED: '0'
-  command: bash test.sh
+  postgres:
+    image: postgres:9.5
+    volumes:
+      - /var/lib/postgresql/data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
