Fix issue with volume being on the wrong path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: /usr/local/bin/gunicorn -w 2 -b :8000 run:server
     env_file: .env
     volumes:
-      - ./web/data:/usr/src/app/web/data
+      - ./data:/usr/src/app/data
       - /var/lib/postgresql/data:/var/lib/postgresql/data
     links:
       - postgres:postgres
